[tool.poetry]
name = "TogashiBot"
version = "0.0.1"
description = "A simple starter messenger bot using python"
homepage = "https://github.com/togashigreat"
authors = ["Muhammad MuQiT"]
packages = [{include = "TogashiBot"}]
# You can add classifiers to describe the project if you like
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "1.10.9"
paho-mqtt = "^1.5.0"
beautifulsoup4 = "^4.0.0"
aenum = "^2.0"
requests = "^2.25.1"
attrs = "21.3"
openai = "1.3.5"
httpx = "0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
